--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -9,11 +9,12 @@ author_profile: true
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
-  {% if post.modified %}
+  <!-- {% if post.modified %}
     {% capture year %}{{ post.modified | date: '%Y' }}{% endcapture %}
   {% else %}
     {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% endif %}
+  {% endif %} -->
+  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
   {% if year != written_year %}
     <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
     {% capture written_year %}{{ year }}{% endcapture %}
